<resources>
    <string name="app_name">Car2Pool</string>
    <string name="slogan">Ride Together • Share Together</string>
    <string name="welcome_morning">Good Day 👋</string>
    <string name="wise_words">Ready for another ride? 🚗</string>
    <string name="search_ride">Search Ride</string>
    <string name="create_ride">Create Ride</string>
    <string name="my_booking">My Booking</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="desc_car_icon">Car icon</string>
    <string name="desc_search_icon">Search icon</string>
    <string name="desc_add_icon">Add icon</string>
    <string name="desc_booking_icon">Booking icon</string>
    <string name="desc_profile_icon">Profile icon</string>
    <string name="my_rides">My Rides</string>
    <string name="manage_created_rides">Manage your created rides</string>
</resources>